loopdowhile.LoopDoWhile.scala.error
Erreur de compilation :
LoopDoWhile:5: error: not found: value yellow
while(getCouleurSol==yellow) 
                     ^